# rusticon

./: .gitignore  Cargo.toml  From_Crumbicon_to_Rusticon.md  Info.plist  Notes.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run  run.bat  tsconfig.json  vite.config.ts
.github/workflows/: binaries.yml  downloadable_binaries.yml  github_pages.yml
docs/: index.html
docs/assets/: index-36fiI_AY.js  index-9jUNA8iz.js  index-ARYdSmSt.css  index-B2CY5lPr.css  index-B6xOfvGu.js  index-BDvVI1v8.js  index-BExVBRqy.css  index-BPfGt0X-.css  index-BPgVKq_n.js  index-BQcZhwWf.js  index-Bh0Qov4Z.js  index-BnyZ6LPo.css  index-BqPuXF6K.js  index-BxC8ULY6.css  index-BzXaeof1.js  index-C0Wr3GJ8.css  index-C6Hjte-W.js  index-C7krlJLn.css  index-CElpsXtG.js  index-CKAcF1sQ.js  index-CSVkZ0jq.js  index-CXZQ1-_c.css  index-CXv5F5jG.js  index-CccZjBr4.css  index-Ce7F7qCV.js  index-Cn6iOcqR.js  index-CpsoEsxy.js  index-D-UpchKJ.js  index-D4sA519M.js  index-DCVSZhKx.css  index-DHvonoLi.css  index-DLtCdpX6.css  index-DaBMj2xc.js  index-DcwGBsjJ.js  index-Djh40LKY.js  index-V1cxIvcP.js  index-z_fYxO-I.js  rusticon_bg-5DaVKNGb.wasm  rusticon_bg-B-m9C7DQ.wasm  rusticon_bg-BIT0g63w.wasm  (+21 more)
scripts/: build_all.js  build_macos.js  build_release.js  build_terminal.js  build_web.js  build_windows.js  bundle.js  bundle_windows.js  clean.js  dev.js  get_name.js  publish.js  set_name.js  utils.js  vite-plugin-cargo-metadata.ts
src/: app.rs  application_flow.rs  event_loop.rs  export.rs  import.rs  lib.rs  macos.rs  main.rs  main.ts  message.rs  native_io.rs  platform.rs  runtime.rs  rusticon_screen.rs  shared.rs  splash.rs  splash_screen.rs  tui_engine.rs  ui.rs  windows.rs
src/app/: app.rs  mod.rs
src/app/core/: application_flow.rs  io.rs  mod.rs  model.rs
src/app/features/: export.rs  import.rs  import_payload.rs  message.rs  mod.rs
src/app/platform/: mod.rs  native_io.rs  wasm_io.rs
src/app/screens/: mod.rs
src/app/screens/editor/: mod.rs  screen.rs
src/app/screens/editor/ui/: button_16.rs  button_8.rs  button_exit.rs  button_save.rs  canvas_16.rs  canvas_8.rs  color_candidate.rs  color_picker_16.rs  color_picker_216.rs  color_picker_empty.rs  color_picker_gray.rs  color_picker_palette.rs  color_selected.rs  label_color_candidate.rs  label_color_selected.rs  label_end.rs  label_new.rs  mod.rs  utils.rs
src/app/screens/launch/: screen.rs
src/app/screens/launch/ui/: launch_hint.rs  launch_logo.rs  mod.rs  start_new.rs
src/app/screens/message/: screen.rs
src/app/screens/message/ui/: message.rs
src/app/screens/splash/: screen.rs
src/app/screens/splash/ui/: mod.rs  splash_footer.rs  splash_logo.rs
src/app/ui/: app.rs  centered_modal.rs  mod.rs  screen.rs  title_bar.rs  viewport_guard.rs
src/core/: app.rs  application_flow.rs  io.rs  mod.rs  model.rs  shared.rs
src/elements/: button_16.rs  button_8.rs  button_exit.rs  button_save.rs  canvas_16.rs  canvas_8.rs  centered_modal.rs  color_candidate.rs  color_picker_16.rs  color_picker_216.rs  color_picker_empty.rs  color_picker_gray.rs  color_picker_palette.rs  color_selected.rs  label_color_candidate.rs  label_color_selected.rs  label_end.rs  label_new.rs  mod.rs  screen.rs  splash_logo.rs  title_bar.rs  utils.rs
src/features/: export.rs  import.rs  message.rs  mod.rs
src/platform/: mod.rs  native.rs  native_io.rs  wasm.rs  wasm_io.rs
src/screens/: mod.rs
src/screens/editor/: screen.rs
src/screens/editor/ui/: button_16.rs  button_8.rs  button_exit.rs  button_save.rs  canvas_16.rs  canvas_8.rs  color_candidate.rs  color_picker_16.rs  color_picker_216.rs  color_picker_empty.rs  color_picker_gray.rs  color_picker_palette.rs  color_selected.rs  label_color_candidate.rs  label_color_selected.rs  label_end.rs  label_new.rs  utils.rs
src/screens/launch/: screen.rs
src/screens/launch/ui/: launch_hint.rs  launch_logo.rs  mod.rs  start_new.rs
src/screens/message/: mod.rs  screen.rs
src/screens/message/ui/: message.rs
src/screens/splash/: mod.rs  screen.rs  splash.rs
src/screens/splash/ui/: splash_footer.rs  splash_logo.rs
src/ui/: button_16.rs  button_8.rs  button_exit.rs  button_save.rs  canvas_16.rs  canvas_8.rs  centered_modal.rs  color_candidate.rs  color_picker_16.rs  color_picker_216.rs  color_picker_empty.rs  color_picker_gray.rs  color_picker_palette.rs  color_selected.rs  label_color_candidate.rs  label_color_selected.rs  label_end.rs  label_new.rs  logo.rs  made_with.rs  mod.rs  screen.rs  splash_footer.rs  splash_logo.rs  tagline.rs  title_bar.rs  utils.rs  viewport_guard.rs
web/: index.html  style.css
