[package]
name = "rusticon"
version = "0.2.3"
edition = "2021"

description = "Rusticon is a mouse driven SVG favicon editor for your terminal."
license = "CC-BY-NC-ND-4.0"
authors = ["Yaron (Ron) Ilan"]
homepage = "https://github.com/ronilan/rusticon"
repository = "https://github.com/ronilan/rusticon"
readme = "README.md"
keywords = ["favicon", "icon", "svg", "terminal", "image"]
categories = ["command-line-utilities", "graphics", "web-programming"]
exclude = ["examples", "media"]

[package.metadata.html]
title = "Rusticon"
description = "Rusticon is a mouse driven SVG favicon editor for your terminal."
keywords = "favicon, icon, svg, terminal, image"

[package.metadata.bundle]
app_name = "Rusticon"
binary_name = "rusticon_macos"
icon_source = "web/favicon.svg"

[lib]
name = "rusticon_lib"
crate-type = ["cdylib", "rlib"]
[features]
default = []
macos-native = [
    "incredible_elements/macos-native",
    "incredible_window_macos",
]

[dependencies]
image = "0.25.6"
incredible = { git = "https://github.com/ronilan/incredible-alpha" }
incredible_elements = { git = "https://github.com/ronilan/incredible-alpha" }
incredible_helpers_layout = { git = "https://github.com/ronilan/incredible-alpha" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3.31"
futures-timer = "3.0.3"
[target.'cfg(all(not(target_arch = "wasm32"), target_os = "windows"))'.dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }

[target.'cfg(target_os = "macos")'.dependencies]
incredible_window_macos = { git = "https://github.com/ronilan/incredible-alpha", optional = true }
objc2 = { version = "0.6.4", features = ["std"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSString", "NSURL", "NSPathUtilities"] }
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSWindow", "NSView", "NSSavePanel", "NSDragging", "NSPasteboard"] }

[[bin]]
name = "rusticon"
path = "src/main.rs"

[[bin]]
name = "rusticon_macos"
path = "src/macos.rs"
required-features = ["macos-native"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlAnchorElement",
    "Location",
    "Url",
    "UrlSearchParams",
    "Blob",
    "DragEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "FileList",
    "File",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
] }
