[package]
name = "rusticon"
version = "0.2.3"
edition = "2021"

description = "Rusticon is a mouse driven SVG favicon editor for your terminal (as well as the web, native macos and native windows)."
license = "CC-BY-NC-ND-4.0"
authors = ["Yaron (Ron) Ilan"]
homepage = "https://github.com/ronilan/rusticon"
repository = "https://github.com/ronilan/rusticon"
readme = "README.md"
keywords = ["favicon", "icon", "svg", "terminal", "image"]
categories = ["command-line-utilities", "graphics", "web-programming"]
exclude = ["examples", "media"]

[package.metadata.html]
title = "Rusticon"
description = "Rusticon is a mouse driven SVG favicon editor for your terminal (as well as the web, native macos and native windows)."
keywords = "favicon, icon, svg, terminal, image"

[lib]
crate-type = ["cdylib"]

[dependencies]
incredible = { git = "https://github.com/ronilan/incredible-alpha" }
image = "0.25.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3.31"
futures-timer = "3.0.3"
incredible_event_loop_terminal = { git = "https://github.com/ronilan/incredible-alpha" }
incredible_output_terminal = { git = "https://github.com/ronilan/incredible-alpha" }
incredible_input_crossterm = { git = "https://github.com/ronilan/incredible-alpha" }
incredible_clipboard_terminal = { git = "https://github.com/ronilan/incredible-alpha" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
incredible_event_loop_browser = { git = "https://github.com/ronilan/incredible-alpha" }
incredible_output_html = { git = "https://github.com/ronilan/incredible-alpha" }
incredible_input_browser = { git = "https://github.com/ronilan/incredible-alpha" }
incredible_clipboard_browser = { git = "https://github.com/ronilan/incredible-alpha" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlAnchorElement",
    "Location",
    "Url",
    "UrlSearchParams",
    "Blob",
    "DragEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "FileList",
    "File",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
] }

[[bin]]
name = "rusticon"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
